# ChangeLog for app-cdr/ccd2iso
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-cdr/ccd2iso/ChangeLog,v 1.10 2007/01/04 21:09:34 grobian Exp $

  04 Jan 2007; Fabian Groffen <grobian@gentoo.org> ccd2iso-0.2-r1.ebuild:
  Dropped ppc-macos keyword, see you in prefix

*ccd2iso-0.2-r1 (13 Jan 2006)

  13 Jan 2006; Mike Frysinger <vapier@gentoo.org> -ccd2iso-0.1.ebuild,
  -ccd2iso-0.2.ebuild, +ccd2iso-0.2-r1.ebuild:
  Clean up old broken ebuilds and make sure we actually install version 0.2 as
  pointed out by Sascha Geschwandtner in #118850.

  21 Apr 2005; Simon Stelling <blubb@gentoo.org> ccd2iso-0.1.ebuild:
  stable on amd64

*ccd2iso-0.2 (19 Apr 2005)

  19 Apr 2005; Lars Weiler <pylon@gentoo.org> +ccd2iso-0.2.ebuild:
  Version bump.  Bug #88932.

  22 Nov 2004; <jhuebel@gentoo.org> ccd2iso-0.1.ebuild:
  ~amd64

  24 Nov 2004; Kito <kito@gentoo.org> ccd2iso-0.1.ebuild:
  added ~ppc-macos closes Bug 71935

  21 Mar 2004; David Holm <dholm@gentoo.org> ccd2iso-0.1.ebuild:
  Added to ~ppc.

*ccd2iso-0.1 (11 Feb 2004)

  11 Feb 2004; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by Graeme Humphries #36114.