@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/libdvdread
-# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libdvdread/ChangeLog,v 1.48 2006/11/14 14:02:56 zzam Exp $
+# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libdvdread/ChangeLog,v 1.49 2007/01/04 22:39:31 drizzt Exp $
+
+  04 Jan 2007; Timothy Redaelli <drizzt@gentoo.org> libdvdread-0.9.7.ebuild:
+  Add ~x86-fbsd keyword
 
   14 Nov 2006; Matthias Schwarzott <zzam@gentoo.org>
   -libdvdread-0.9.4-r1.ebuild:
